@@ -33,6 +33,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -203,7 +204,7 @@ public class NPCEntityData extends SavedData {
       return Collections.emptyList();
     }
 
-    return this.metadata.keySet().stream()
+    return List.copyOf(this.metadata.keySet()).stream()
         .map(this::getEntry)
         .filter(Optional::isPresent)
         .map(Optional::get)
@@ -215,7 +216,7 @@ public class NPCEntityData extends SavedData {
   }
 
   public Set<UUID> getAllUUIDs() {
-    return Collections.unmodifiableSet(this.metadata.keySet());
+    return Set.copyOf(this.metadata.keySet());
   }
 
   public boolean hasEntry(UUID uuid) {
@@ -253,19 +254,19 @@ public class NPCEntityData extends SavedData {
   }
 
   public Set<String> getAllEntityTypes() {
-    return Collections.unmodifiableSet(this.entriesByType.keySet());
+    return Set.copyOf(this.entriesByType.keySet());
   }
 
   public Set<String> getAllDimensions() {
-    return Collections.unmodifiableSet(this.entriesByDimension.keySet());
+    return Set.copyOf(this.entriesByDimension.keySet());
   }
 
   public Set<Identifier> getAllCustomIdentifiers() {
-    return Collections.unmodifiableSet(this.entriesByCustomIdentifier.keySet());
+    return Set.copyOf(this.entriesByCustomIdentifier.keySet());
   }
 
   public Set<String> getAllCustomIdentifierNamespaces() {
-    return Collections.unmodifiableSet(this.entriesByCustomIdentifierNamespace.keySet());
+    return Set.copyOf(this.entriesByCustomIdentifierNamespace.keySet());
   }
 
   public Collection<SavedNPCEntityEntry> getEntriesByOwner(UUID ownerUUID) {
@@ -307,7 +308,7 @@ public class NPCEntityData extends SavedData {
       return Collections.emptyList();
     }
 
-    return uuids.stream()
+    return List.copyOf(uuids).stream()
         .map(this::getEntry)
         .filter(Optional::isPresent)
         .map(Optional::get)
@@ -412,7 +413,7 @@ public class NPCEntityData extends SavedData {
 
   public void updateRemovalReason(UUID uuid, NPCRemovalReason reason) {
     NPCEntityMetadata old = this.metadata.get(uuid);
-    if (old == null) {
+    if (old == null || old.removalReason() == reason) {
       return;
     }
 
